handle expense more than balance scenario

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <div class="summary-container">
             <div class="summary-box">
                 <h4>Total Income</h4>
-                <p id="total-income" class="positive">$0.00</p>
+                <p id="total-income" class="positive">₹0.00</p>
             </div>
             <div class="summary-box">
                 <h4>Total Expense</h4>
-                <p id="total-expense" class="negative">$0.00</p>
+                <p id="total-expense" class="negative">₹0.00</p>
             </div>
             <div class="summary-box">
                 <h4>Net Balance</h4>
-                <p id="net-balance">$0.00</p>
+                <p id="net-balance">₹0.00</p>
             </div>
         </div>
 
